<?xml version="1.0"?>
<package format="2">
  <name>simple_chassis_controller</name>
  <version>0.1.0</version>
  <description>Simple robot Chassis controller</description>
  <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
  <license>BSD</license>
  <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->

  <!-- depend: build, export, and execution dependency -->
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>forward_command_controller</depend>
  <depend>pluginlib</depend>
  <depend>rm_description</depend>

  <export>
    <controller_interface plugin="${prefix}/simple_chassis_controller_plugins.xml"/>
  </export>
</package>